--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   "homepage": "https://github.com/jet-lab/jet-anchor#readme",
   "dependencies": {
     "@iarna/toml": "^2.2.5",
-    "@jet-lab/jet-client": "file:libraries/ts",
-    "@project-serum/anchor": "^0.13.0",
-    "@project-serum/serum": "^0.13.33",
+    "@jet-lab/jet-engine": "^0.1.4",
+    "@project-serum/anchor": "^0.18.0",
+    "@project-serum/serum": "^0.13.60",
     "@pythnetwork/client": "^2.0.0",
     "@solana/spl-token": "^0.1.3",
     "@solana/web3.js": "^1.20.0",
