added a proxy key to package json file

--- a/app/package.json
+++ b/app/package.json
@@ -66,5 +66,7 @@
   },
   "optionalDependencies": {
     "fsevents": "^2.0.7"
-  }
+  },
+  "private": true,
+  "proxy": "https://p2p.binance.com"
 }
