--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/lodash": "^4.14.175",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
+    "rollup-plugin-dev": "^2.0.1",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.3.5"
   },
