--- a/app/package.json
+++ b/app/package.json
@@ -51,6 +51,7 @@
     "firebase": "^9.0.0-beta.8",
     "path": "^0.12.7",
     "rollbar": "^2.24.0",
+    "rollup-plugin-dev": "^2.0.1",
     "rollup-plugin-external-globals": "^0.6.1",
     "rollup-plugin-node-builtins": "^2.0.0",
     "rollup-plugin-node-globals": "^1.4.0",
